--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HərşeyBurada</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,10 +47,10 @@
                     <h1 class="main-text">Bizə qoşulun!</h1>
                     <h3 class="sec-text">Yeni başlayan bu macəranın bir hissəsi siz də olun</h3>
                 </div>
-                <form id="order_form" class="form-it order_form" netlify>
-                    <input class="form-input" type="text" name="name" id="name" placeholder="ad və soyadınız">
-                    <input class="form-input" type="email" name="email" id="email" placeholder="e-mail adresiniz">
-                    <button class="button form-button" type="submit">Abunə ol</button>
+                <form id="order_form" class="form-it order_form">
+                    <input class="form-input" type="text" name="name" id="name" placeholder="ad və soyadınız" required>
+                    <input class="form-input" type="email" name="email" id="email" placeholder="e-mail adresiniz" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" required>
+                    <button class="button form-button">Abunə ol</button>
                 </form>
             </div>
         </section>
@@ -90,7 +90,7 @@
             </div>
             <div class="link-circles">
                 <a href="https://www.instagram.com/herseyburadaz/" class="circle-3">
-                    <img src="instagram.svg" alt="instagram" class="ig">
+                    <img src="./assets/images/instagram.svg" alt="instagram" class="ig">
                 </a>
             </div>
             <div class="text-for-links">
@@ -110,7 +110,8 @@
         </div>
     </footer>
 
-    <script src="form-v.js" defer></script>
-    <script src="scripts.js" defer></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script src="./assets/scripts/form-v.js" defer></script>
+    <script src="./assets/scripts/scripts.js" defer></script>
 </body>
 </html>
